# parameterized-transforms

./: .gitignore  ACKNOWLEDGEMENTS  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml  testing.yml
docs/source/: conf.py  index.rst
docs/source/python/: core.rst  transforms.rst  utils.rst  wrappers.rst
docs/source/tutorials/: 000-About-the-Package.md  001-The-Structure-of-Parametrized-Transforms.md  002-How-to-Write-Your-Own-Transforms.md  (+4 more)
examples/: 002-001-RandomColorErasing.ipynb  002-002-RandomSubsetApply.ipynb  002-003-Visualizations.ipynb  004-001-Playground.ipynb  005-001-Torch-Torchvision-to-Parametrized-Transforms.ipynb
parameterized_transforms/: __init__.py  core.py  transforms.py  utils.py  wrappers.py
tests/: test_functions.py
tests/test_atomic_transforms/: test_CenterCrop.py  test_ColorJitter.py  test_ConvertImageDtype.py  test_ElasticTransform.py  test_FiveCrop.py  test_GaussianBlur.py  test_Grayscale.py  test_Lambda.py  test_LinearTransformation.py  test_Normalize.py  test_PILToTensor.py  test_Pad.py  test_RandomAdjustSharpness.py  test_RandomAffine.py  test_RandomAutocontrast.py  test_RandomCrop.py  test_RandomEqualize.py  test_RandomErasing.py  test_RandomGrayscale.py  test_RandomHorizontalFlip.py  test_RandomInvert.py  test_RandomPerspective.py  test_RandomPosterize.py  test_RandomResizedCrop.py  test_RandomRotation.py  test_RandomSolarize.py  test_RandomVerticalFlip.py  test_Resize.py  test_TenCrop.py  test_ToPILImage.py  test_ToTensor.py
tests/test_composing_transforms/: __init__.py  test_Compose.py  test_RandomApply.py  test_RandomChoice.py  test_RandomOrder.py
