# Copyright 2025 Apple Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


# Metadata
# ============================================================================
[project]

name = "parameterized_transforms"
version = "1.0.0"
description = "Transforms that provide reproducible access to parameterization information."
authors = [
    {name="Eeshan Gunesh Dhekane", email="eeshangunesh_dhekane@apple.com"}
]
license= {"text"="Apache License, Version 2.0"}
readme = "README.md"
requires-python = ">=3.9.6"  # Improve this.
dependencies = [
    "numpy",
    "torch",
    "torchvision"
]


[tool.setuptools]
py-modules = ["parameterized_transforms"]


[project.urls]
Repository = "https://github.com/apple/parameterized-transforms"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-memray",
    "coverage[toml]"
]


# Pytest options
# ============================================================================
[tool.pytest.ini_options]
# This determines where test are found
testpaths = ["tests/"]
